done merchant-info

--- a/src/app/homepage/merchant-detail/merchant-detail.component.css
+++ b/src/app/homepage/merchant-detail/merchant-detail.component.css
@@ -20481,7 +20481,7 @@ button.history-table-status.gray {
 }
 
 .now-menu-restaurant {
-  width: 845px;
+  width: 100%;
   margin-bottom: 20px;
   min-height: 226px;
   float: left
@@ -20530,7 +20530,7 @@ button.history-table-status.gray {
 .menu-restaurant-category {
   border: 1px solid #ebebeb;
   padding: 15px 5px 15px 15px;
-  width: 235px;
+  width: 300px;
   margin-right: 10px;
   background: #fff;
   border-radius: 4px
@@ -20573,13 +20573,14 @@ button.history-table-status.gray {
 }
 
 .menu-restaurant-detail {
-  width: 590px;
+  width: 850px;
   padding: 6px 15px;
   float: right;
   border: 1px solid #ebebeb;
   border-radius: 4px;
   background: #fff
 }
+
 
 .menu-restaurant-detail .duplicate-order {
   font-size: 13px;
