--- a/src/app/merchant/product-create/product-create.component.html
+++ b/src/app/merchant/product-create/product-create.component.html
@@ -31,7 +31,7 @@
     <label for="customFile" class="col-sm-2 col-form-label">Thêm ảnh</label>
     <div class="col-sm-10">
       <input type="file" class="form-control" id="customFile" #fileUploader (change)="showPreview($event)"/><br>
-      <img [src]="imgSrc" class="rounded-circle" height="125" width="100" alt="Img" (click)="fileUploader.click()"><br>
+      <img [src]="imgSrc" class="img" height="125" width="100" alt="Img" (click)="fileUploader.click()"><br>
     </div>
   </div>
   <div class="mb-3 row">
