--- a/src/app/account/register-merchant/register-merchant.component.html
+++ b/src/app/account/register-merchant/register-merchant.component.html
@@ -203,7 +203,7 @@
     <!--form login-->
     <div class="now-login">
       <div class="content">
-        <div class="title">Đăng nhập</div>
+        <div class="title">Đăng ký người bán</div>
         <div class="login-via">
           <div class="item phone"><span class="fas fa-mobile-alt"></span>Số điện thoại</div>
           <div class="item fb"><span class="fab fa-facebook-f"></span>Facebook</div>
@@ -222,12 +222,12 @@
             <div class="item plus"><i class="fab fa-google-plus-g"></i>Google</div>
           </form>
         </div>
-        <p class="text">Hoặc đăng nhập bằng tài khoản của bạn</p>
+<!--        <p class="text">Hoặc đăng nhập bằng tài khoản của bạn</p>-->
         <form [formGroup]="registerForm" (ngSubmit)="register()" >
           <div class="form-login-input">
             <div class="field-group">
-              <div class="input-group"><i class="far fa-envelope"></i><input type="text"
-                                                                             placeholder="Tên đăng nhập" value="" formControlName="userName">
+              <div class="input-group"><i class="far fa-user"></i><input type="text"
+                                                                             placeholder="Tên đăng ký" value="" formControlName="userName">
                 <div *ngIf="!userName?.valid && (userName?.dirty || userName?.touched)">
                   <div [hidden]="!userName?.errors?.['required']">
                     <p style="color: red"> Tên không được trống </p>
@@ -255,8 +255,11 @@
                 <div [hidden]="!email?.errors?.['minlength']">
                   <p style="color: red"> Tên phải nhiều hơn 3 ký tự </p>
                 </div>
+                <div [hidden]="!email?.errors?.['pattern']">
+                  <p style="color: red"> Email phải đúng định dạng </p>
+                </div>
               </div></div>
-              <div class="input-group"><i class="far fa-envelope"></i><input type="text" placeholder="Nhập tên chủ tài khoản"
+              <div class="input-group"><i class="far fa-user"></i><input type="text" placeholder="Nhập tên chủ tài khoản"
                                                                              value="" formControlName="name"><div *ngIf="!name?.valid && (name?.dirty || name?.touched)">
                 <div [hidden]="!name?.errors?.['required']">
                   <p style="color: red"> Tên không được trống </p>
@@ -265,7 +268,7 @@
                   <p style="color: red"> Tên phải nhiều hơn 3 ký tự </p>
                 </div>
               </div></div>
-              <div class="input-group"><i class="fas fa-lock"></i><input type="text" placeholder="Nhập số điện thoại"
+              <div class="input-group"><i class="fas fa-phone"></i><input type="text" placeholder="Nhập số điện thoại"
                                                                          value="" formControlName="phone"><div *ngIf="!phone?.valid && (phone?.dirty || phone?.touched)">
                 <div [hidden]="!phone?.errors?.['required']">
                   <p style="color: red"> Tên không được trống </p>
@@ -274,7 +277,7 @@
                   <p style="color: red"> Tên phải nhiều hơn 3 ký tự </p>
                 </div>
               </div></div>
-              <div class="input-group"><i class="fas fa-lock"></i><input type="text" placeholder="Nhập địa chỉ"
+              <div class="input-group"><i class="fas fa-home"></i><input type="text" placeholder="Nhập địa chỉ"
                                                                          value="" formControlName="address"><div *ngIf="!address?.valid && (address?.dirty || address?.touched)">
                 <div [hidden]="!address?.errors?.['required']">
                   <p style="color: red"> Tên không được trống </p>
@@ -284,12 +287,12 @@
                 </div>
               </div></div>
             </div>
-            <div class="form-group clearfix">
-              <div class="float-left"><input type="checkbox" id="RememberMe" checked=""><label for="RememberMe">Lưu
-                thông tin đăng nhập</label></div>
-              <span class="float-right"><a href="/forgotPassword">Quên mật
-                                    khẩu?</a></span>
-            </div>
+<!--            <div class="form-group clearfix">-->
+<!--              <div class="float-left"><input type="checkbox" id="RememberMe" checked=""><label for="RememberMe">Lưu-->
+<!--                thông tin đăng nhập</label></div>-->
+<!--              <span class="float-right"><a href="/forgotPassword">Quên mật-->
+<!--                                    khẩu?</a></span>-->
+<!--            </div>-->
             <button class="btn btn-block btn-submit">Đăng ký</button>
           </div>
         </form>
