--- a/src/app/homepage/all-merchant-list/all-merchant-list.component.html
+++ b/src/app/homepage/all-merchant-list/all-merchant-list.component.html
@@ -2,8 +2,8 @@
 <ng-template #thenBlock>
   <div class="now-list-restaurant" >
     <div class="list-restaurant" >
-      <div class="item-restaurant" *ngFor="let merchant of merchants" >
-        <a class="item-content" [routerLink]="['merchant-detail',merchant.id]">
+      <div class="item-restaurant" *ngFor="let merchant of merchants, index as i" >
+        <a [hidden]="hidden(i)" class="item-content" [routerLink]="['merchant-detail',merchant.id]">
           <div class="img-restaurant"><img
             src="{{merchant.avatar}}" class=""></div>
           <div class="info-restaurant">
@@ -22,6 +22,8 @@
       </div>
     </div>
   </div>
+  <div class="txt-center mt-2"><button (click)="plus()" class="btn-none btn-load-more link"><span
+    class="pr-1">Xem thêm</span><i class="fas fa-redo font12 "></i></button></div>
 </ng-template>
 <ng-template #elseBlock>
   <router-outlet></router-outlet>
