--- a/src/app/homepage/merchant-detail/merchant-detail.component.html
+++ b/src/app/homepage/merchant-detail/merchant-detail.component.html
@@ -160,7 +160,7 @@
                             </div>
                           </div>
                           <div class="col-auto adding-food-cart txt-right">
-                            <div class="btn-adding">+</div>
+                            <div class="btn-adding" (click)="addToCart(product)">+</div>
                           </div>
                         </div>
                       </div>
