--- a/src/app/account/register-merchant/register-merchant.component.html
+++ b/src/app/account/register-merchant/register-merchant.component.html
@@ -108,7 +108,7 @@
               </div>
             </div>
             <div class="user-acc col-auto">
-              <button type="button" onclick="login()" class="btn btn-none-bg btn-login">
+              <button type="button" class="btn btn-none-bg btn-login">
                 <span routerLink="/login" class="font14">Đăng nhập</span>
               </button>
             </div>
