--- a/src/app/homepage/user-info/user-info.component.html
+++ b/src/app/homepage/user-info/user-info.component.html
@@ -7,7 +7,7 @@
           src="./assets/img/shopeefoodvn.png"
           alt="ShopeeFood"></a></span></div>
 
-        <div class="main-nav col"><span>Kênh người bán</span></div>
+        <div class="main-nav col"><span></span></div>
 
         <div class="language dropdown col-auto">
           <div class="dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown"
