--- a/src/app/admin/merchant-list/merchant-list.component.html
+++ b/src/app/admin/merchant-list/merchant-list.component.html
@@ -1,9 +1,28 @@
-<main >
-  <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+<main class="container-fluid m-md-5">
+  <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center border-bottom">
     <h1 class="h2">Quản lý người bán</h1>
   </div>
 
-  <a routerLink="pending">Chờ duyệt</a> | <a routerLink="active">Đang hoạt động</a> | <a routerLink="block">Đang bị khóa</a>
+<!--  <a class="link-warning fw-bold " routerLink="pending" >Chờ duyệt</a> | <a class="link fw-bold" routerLink="active" >Đang hoạt động</a> | <a class="link-danger fw-bold" routerLink="block" >Đang bị khóa</a>-->
+
+
+
+
+<div class="container card shadow d-flex justify-content-center mt-5">
+  <!-- nav options -->
+  <ul class="nav nav-pills mb-3 shadow-sm" id="pills-tab" role="tablist">
+    <li class="nav-item">
+      <a class="nav-link link fw-bold"  id="pills-home-tab" data-toggle="pill" routerLink="pending" role="tab"  routerLinkActive="selected">Chờ duyệt</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link link fw-bold" id="pills-profile-tab" data-toggle="pill" routerLink="active" role="tab"  routerLinkActive="selected" [routerLinkActiveOptions]="{exact: true}">Đang hoạt động</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link link fw-bold" id="pills-contact-tab" data-toggle="pill" routerLink="block" role="tab"  routerLinkActive="selected">Đang bị khóa</a>
+    </li>
+  </ul>
+
+  <!-- content -->
   <div *ngIf="url==='/admin/merchant-list'; then thenBlock else elseBlock"></div>
   <ng-template #thenBlock class="table-responsive">
     <table class="table table-striped table-sm">
@@ -40,6 +59,5 @@
   <ng-template #elseBlock>
     <router-outlet ></router-outlet>
   </ng-template>
-
-
-</main>
+</div>
+  </main>
